--- a/src/output.css
+++ b/src/output.css
@@ -599,9 +599,6 @@
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
   }
-  .mt-2 {
-    margin-top: calc(var(--spacing) * 2);
-  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -620,6 +617,9 @@
   .hidden {
     display: none;
   }
+  .inline {
+    display: inline;
+  }
   .inline-flex {
     display: inline-flex;
   }
@@ -629,14 +629,26 @@
   .table {
     display: table;
   }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
+  }
+  .h-0\.5 {
+    height: calc(var(--spacing) * 0.5);
+  }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
+  .h-9 {
+    height: calc(var(--spacing) * 9);
+  }
   .h-10 {
     height: calc(var(--spacing) * 10);
-  }
-  .h-14 {
-    height: calc(var(--spacing) * 14);
   }
   .h-20 {
     height: calc(var(--spacing) * 20);
@@ -644,11 +656,23 @@
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
+  .h-28 {
+    height: calc(var(--spacing) * 28);
+  }
   .h-36 {
     height: calc(var(--spacing) * 36);
   }
+  .h-48 {
+    height: calc(var(--spacing) * 48);
+  }
+  .h-60 {
+    height: calc(var(--spacing) * 60);
+  }
   .h-80 {
     height: calc(var(--spacing) * 80);
+  }
+  .h-96 {
+    height: calc(var(--spacing) * 96);
   }
   .h-auto {
     height: auto;
@@ -656,8 +680,14 @@
   .h-full {
     height: 100%;
   }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
+  }
   .w-6 {
     width: calc(var(--spacing) * 6);
+  }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
   }
   .w-32 {
     width: calc(var(--spacing) * 32);
@@ -665,8 +695,23 @@
   .w-36 {
     width: calc(var(--spacing) * 36);
   }
+  .w-60 {
+    width: calc(var(--spacing) * 60);
+  }
+  .w-96 {
+    width: calc(var(--spacing) * 96);
+  }
+  .w-auto {
+    width: auto;
+  }
+  .w-fit {
+    width: fit-content;
+  }
   .w-full {
     width: 100%;
+  }
+  .w-min {
+    width: min-content;
   }
   .flex-shrink {
     flex-shrink: 1;
@@ -686,6 +731,12 @@
   .border-collapse {
     border-collapse: collapse;
   }
+  .origin-top-left {
+    transform-origin: top left;
+  }
+  .rotate-\[-15deg\] {
+    rotate: -15deg;
+  }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
@@ -697,6 +748,9 @@
   }
   .flex-row {
     flex-direction: row;
+  }
+  .content-center {
+    align-content: center;
   }
   .items-center {
     align-items: center;
@@ -740,6 +794,9 @@
   .place-self-stretch {
     place-self: stretch;
   }
+  .self-center {
+    align-self: center;
+  }
   .self-stretch {
     align-self: stretch;
   }
@@ -760,11 +817,45 @@
     border-style: var(--tw-border-style);
     border-width: 2px;
   }
+  .border-4 {
+    border-style: var(--tw-border-style);
+    border-width: 4px;
+  }
+  .border-\[\#10f010\] {
+    border-color: #10f010;
+  }
+  .border-\[\#ff0000\] {
+    border-color: #ff0000;
+  }
+  .border-\[\#ff3636\] {
+    border-color: #ff3636;
+  }
   .border-grays-300 {
     border-color: var(--color-grays-300);
   }
+  .border-grays-500 {
+    border-color: var(--color-grays-500);
+  }
+  .border-grays-700 {
+    border-color: var(--color-grays-700);
+  }
+  .border-grays-800 {
+    border-color: var(--color-grays-800);
+  }
   .border-transparent {
     border-color: transparent;
+  }
+  .bg-\[\#a11920\] {
+    background-color: #a11920;
+  }
+  .bg-\[\#f8f3f3\] {
+    background-color: #f8f3f3;
+  }
+  .bg-\[\#ffe4ca\] {
+    background-color: #ffe4ca;
+  }
+  .bg-\[\#fff1e4\] {
+    background-color: #fff1e4;
   }
   .bg-beige-50 {
     background-color: var(--color-beige-50);
@@ -774,6 +865,9 @@
   }
   .bg-beige-300 {
     background-color: var(--color-beige-300);
+  }
+  .bg-beige-700 {
+    background-color: var(--color-beige-700);
   }
   .bg-grays-0 {
     background-color: var(--color-grays-0);
@@ -799,17 +893,51 @@
   .bg-red-650 {
     background-color: var(--color-red-650);
   }
+  .bg-white {
+    background-color: var(--color-white);
+  }
   .bg-gradient-to-b {
     --tw-gradient-position: to bottom in oklab,;
     background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .bg-gradient-to-br {
+    --tw-gradient-position: to bottom right in oklab,;
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .from-\[\#56423d\] {
+    --tw-gradient-from: #56423d;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[\#f1fff4\] {
+    --tw-gradient-from: #f1fff4;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .from-\[\#ffead7\] {
     --tw-gradient-from: #ffead7;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .from-\[\#fffcfc\] {
+    --tw-gradient-from: #fffcfc;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#785a52\] {
+    --tw-gradient-to: #785a52;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#c3f3ce\] {
+    --tw-gradient-to: #c3f3ce;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .to-\[\#efc59b\] {
     --tw-gradient-to: #efc59b;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#ffecec\] {
+    --tw-gradient-to: #ffecec;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -823,8 +951,23 @@
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
+  .px-\[10\%\] {
+    padding-inline: 10%;
+  }
+  .px-\[13\%\] {
+    padding-inline: 13%;
+  }
+  .px-\[15\%\] {
+    padding-inline: 15%;
+  }
+  .px-\[18\%\] {
+    padding-inline: 18%;
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
+  }
+  .py-2\.5 {
+    padding-block: calc(var(--spacing) * 2.5);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -838,20 +981,23 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
-  .py-8 {
-    padding-block: calc(var(--spacing) * 8);
-  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
   }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
+  .pt-2\.5 {
+    padding-top: calc(var(--spacing) * 2.5);
+  }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
-  .pb-1 {
-    padding-bottom: calc(var(--spacing) * 1);
+  .pr-2 {
+    padding-right: calc(var(--spacing) * 2);
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
@@ -859,17 +1005,23 @@
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
-  .pb-5 {
-    padding-bottom: calc(var(--spacing) * 5);
-  }
   .pb-6 {
     padding-bottom: calc(var(--spacing) * 6);
+  }
+  .pl-1 {
+    padding-left: calc(var(--spacing) * 1);
+  }
+  .pl-1\.5 {
+    padding-left: calc(var(--spacing) * 1.5);
   }
   .pl-px {
     padding-left: 1px;
   }
   .text-center {
     text-align: center;
+  }
+  .font-\[\'Montserrat\'\] {
+    font-family: 'Montserrat';
   }
   .font-sans {
     font-family: var(--font-sans);
@@ -901,9 +1053,6 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
-  .text-\[26px\] {
-    font-size: 26px;
-  }
   .leading-4 {
     --tw-leading: calc(var(--spacing) * 4);
     line-height: calc(var(--spacing) * 4);
@@ -924,17 +1073,41 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-nowrap {
+    text-wrap: nowrap;
+  }
+  .text-wrap {
+    text-wrap: wrap;
+  }
   .text-\[\#3f444c\] {
     color: #3f444c;
+  }
+  .text-\[\#7e8897\] {
+    color: #7e8897;
+  }
+  .text-\[\#000101\] {
+    color: #000101;
+  }
+  .text-\[\#460a0a\] {
+    color: #460a0a;
+  }
+  .text-\[\#a11920\] {
+    color: #a11920;
+  }
+  .text-\[\#b98049\] {
+    color: #b98049;
   }
   .text-\[\#f8f3f3\] {
     color: #f8f3f3;
   }
+  .text-\[\#ff0000\] {
+    color: #ff0000;
+  }
+  .text-beige-700 {
+    color: var(--color-beige-700);
+  }
   .text-beige-900 {
     color: var(--color-beige-900);
-  }
-  .text-grays-700 {
-    color: var(--color-grays-700);
   }
   .text-grays-75 {
     color: var(--color-grays-75);
@@ -953,6 +1126,9 @@
   }
   .italic {
     font-style: italic;
+  }
+  .line-through {
+    text-decoration-line: line-through;
   }
   .underline {
     text-decoration-line: underline;
@@ -973,6 +1149,27 @@
     &:hover {
       @media (hover: hover) {
         border-color: var(--color-red-650);
+      }
+    }
+  }
+  .hover\:bg-grays-0 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-grays-0);
+      }
+    }
+  }
+  .hover\:bg-grays-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-grays-200);
+      }
+    }
+  }
+  .hover\:bg-grays-400 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-grays-400);
       }
     }
   }
